# auth_api

./: Cargo.toml
src/: main.rs  utils.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs
