[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
serde_json = "1.0.140"
dotenv = "0.15"
